# conwayRUST

./: .gitignore  Cargo.toml
src/: lib.rs
