[package]
name = "web-server"
version = "0.1.0"
authors = ["akivab <akiva.bamberger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
rand = "0.8.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
